--- a/web/templates/subscribe_to_more_streams.hbs
+++ b/web/templates/subscribe_to_more_streams.hbs
@@ -1,12 +1,12 @@
 {{#if exactly_one_unsubscribed_stream}}
     <a href="#streams/all">
         <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        {{~#tr}}Browse 1 more stream{{/tr~}}
+        {{~#tr}}浏览更多频道{{/tr~}}
     </a>
 {{else if can_subscribe_stream_count}}
     <a href="#streams/all">
         <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        {{~#tr}}Browse {can_subscribe_stream_count} more streams{{/tr~}}
+        {{~#tr}}浏览 {can_subscribe_stream_count} 个额外的频道{{/tr~}}
     </a>
 {{else if can_create_streams}}
     <a href="#streams/new">
