--- a/web/templates/gear_menu.bak.hbs
+++ b/web/templates/gear_menu.bak.hbs
@@ -6,10 +6,41 @@
         <ul class="dropdown-menu" role="menu" aria-labelledby="settings-dropdown">
             <li class="org-info org-name">{{realm_name}}</li>
             <li class="org-info org-url">{{realm_url}}</li>
+            {{#if is_self_hosted }}
+                <li class="org-info org-version">
+                    <a href="#about-zulip" role="menuitem">{{version_display_string}}</a>
+                </li>
+                {{#if server_needs_upgrade }}
+                <li class="org-info org-upgrade small-font-size">
+                    <a href="https://zulip.readthedocs.io/en/stable/production/upgrade-or-modify.html" target="_blank" rel="noopener noreferrer" role="menuitem">{{t 'Upgrade to the latest release' }}</a>
+                </li>
+                {{/if}}
+            {{else}}
+                <li class="org-info org-plan hidden-for-spectators small-font-size">
+                    {{#if is_plan_limited }}
+                        <a href="/plans/" target="_blank" rel="noopener noreferrer" role="menuitem">Zulip Cloud Free</a>
+                    {{else if is_plan_standard}}
+                        <a href="/plans/" target="_blank" rel="noopener noreferrer" role="menuitem">Zulip Cloud Standard</a>
+                    {{else if is_plan_standard_sponsored_for_free}}
+                        <a href="/plans/" target="_blank" rel="noopener noreferrer" role="menuitem">Zulip Cloud Standard (sponsored)</a>
+                    {{/if}}
+                </li>
+            {{/if}}
             {{#if (and is_plan_limited is_owner) }}
             <li class="org-info org-upgrade small-font-size">
                 <a href="/upgrade/" target="_blank" rel="noopener noreferrer" role="menuitem">{{t "Upgrade to {standard_plan_name}" }}</a>
             </li>
+            {{/if}}
+            {{#if is_plan_limited }}
+                {{#if is_education_org }}
+                <li class="org-info org-upgrade small-font-size">
+                    <a href="/upgrade/" target="_blank" rel="noopener noreferrer" role="menuitem">{{t 'Request education pricing' }}</a>
+                </li>
+                {{else if (not is_business_org) }}
+                <li class="org-info org-upgrade small-font-size">
+                    <a href="/upgrade/" target="_blank" rel="noopener noreferrer" role="menuitem">{{t 'Request sponsorship' }}</a>
+                </li>
+                {{/if}}
             {{/if}}
             <li class="divider" role="presentation"></li>
             <li class="hidden-for-spectators" role="presentation">
@@ -88,6 +119,46 @@
                 </a>
             </li>
             {{/if}}
+            {{#if is_admin}}
+                <li class="divider" role="presentation"></li>
+                <li role="presentation" class="hidden-for-spectators">
+                    <a href="{{ apps_page_url }}" target="_blank" rel="noopener noreferrer" role="menuitem">
+                        <i class="fa fa-desktop" aria-hidden="true"></i> {{t 'Desktop & mobile apps' }}
+                    </a>
+                </li>
+                <li role="presentation" class="hidden-for-spectators">
+                    <a href="/integrations/" target="_blank" rel="noopener noreferrer" role="menuitem">
+                        <i class="fa fa-github" aria-hidden="true"></i> {{t 'Integrations' }}
+                    </a>
+                </li>
+                <li role="presentation" class="hidden-for-spectators">
+                    <a href="/api" target="_blank" rel="noopener noreferrer" role="menuitem">
+                        <i class="fa fa-sitemap" aria-hidden="true"></i> {{t 'API documentation' }}
+                    </a>
+                </li>
+                {{#if show_billing}}
+                <li role="presentation" class="hidden-for-spectators">
+                    <a href="/billing/" target="_blank" rel="noopener noreferrer" role="menuitem">
+                        <i class="fa fa-credit-card" aria-hidden="true"></i> {{t 'Billing' }}
+                    </a>
+                </li>
+                {{/if}}
+                {{#if promote_sponsoring_zulip}}
+                <li role="presentation" class="hidden-for-spectators">
+                    <a href="https://zulip.com/help/support-zulip-project" target="_blank" rel="noopener noreferrer" role="menuitem">
+                        <i class="fa fa-heart" aria-hidden="true"></i> {{t 'Support Zulip' }}
+                    </a>
+                </li>
+                {{/if}}
+                {{#if show_plans}}
+                <li role="presentation" class="hidden-for-spectators">
+                    <a href="/plans/" target="_blank" rel="noopener noreferrer" role="menuitem">
+                        <i class="fa fa-rocket" aria-hidden="true"></i> {{t 'Plans and pricing' }}
+                    </a>
+                </li>
+                {{/if}}
+            {{/if}}
+            <li class="divider hidden-for-spectators" role="presentation"></li>
             {{#if can_invite_others_to_realm}}
             <li role="presentation">
                 <a class="invite-user-link" role="menuitem">
