--- a/templates/zerver/footer.html
+++ b/templates/zerver/footer.html
@@ -102,16 +102,16 @@
             {% if corporate_enabled %}
             <div class="copyright">© Kandra Labs, Inc. (“Zulip”)</div>
             {% else %}
-            <div class="copyright">{% trans %}Powered by <a href="https://zulip.com">Zulip</a>{% endtrans %}</div>
+            <div class="copyright">{% trans %}Powered by <a href="javascript:;">Zulip</a>{% endtrans %}</div>
             {% endif %}
             <div class="footer__legal-spacer"></div>
             {% if not corporate_enabled %}
-            <a href="/help/">{{ _("Help center") }}</a>
+            <a href="javascript:;">{{ _("Help center") }}</a>
             {% endif %}
-            <a href="{{ root_domain_url }}/policies/terms">{{ _("Terms of Service") }}</a>
-            <a href="{{ root_domain_url }}/policies/privacy">{{ _("Privacy policy") }}</a>
+            <a href="javascript:;">{{ _("Terms of Service") }}</a>
+            <a href="javascript:;">{{ _("Privacy policy") }}</a>
             {% if corporate_enabled %}
-            <a href="https://zulip.com/attribution/">{{ _("Website attributions") }}</a>
+            <a href="javascript:;">{{ _("Website attributions") }}</a>
             {% endif %}
         </div>
     </div>
