--- a/web/styles/portico/portico.css
+++ b/web/styles/portico/portico.css
@@ -419,6 +419,17 @@ input.text-error {
             color: hsl(0deg 0% 20%);
             opacity: 0.7;
         }
+
+        .new {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+
+        .text {
+            padding-top: 5px;
+            font-weight: 700;
+        }
     }
 
     .portico-logo {
