--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -415,10 +415,11 @@ ul {
     }
 
     .name {
-        color: hsl(0deg 0% 20%);
+        /* color: hsl(0deg 0% 20%); */
         width: 120px;
         font-weight: 600;
         margin-right: 10px;
+        margin-bottom: 5px;
     }
 
     .value {
@@ -925,5 +926,50 @@ ul {
 #send_later_modal {
     .modal__content {
         padding-bottom: 16px;
+    }
+}
+
+.modal__footer {
+    &.new__footer {
+        justify-content: center;
+    }
+
+    .nav {
+        width: 100%;
+        display: flex;
+    }
+
+    .nav-item {
+        flex: 1;
+        text-align: center;
+    }
+
+    .nav-item a {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .nav-item .fa {
+        font-size: 28px;
+    }
+}
+
+.new-avatar-box {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    margin-bottom: 10px;
+
+    .default-field {
+        padding-top: 10px;
+    }
+}
+
+@media (width < $ml_min) {
+    .new-avatar-box {
+        flex-direction: row;
+        gap: 20px;
     }
 }
