--- a/web/templates/right_sidebar.hbs
+++ b/web/templates/right_sidebar.hbs
@@ -1,4 +1,32 @@
 <div class="right-sidebar" id="right-sidebar" role="navigation">
+    {{!-- <div class="status">
+        <ul class="nav nav-list">
+            <li>
+                <a tabindex="0" class="update_status_text">
+                    <i class="fa fa-comments" aria-hidden="true"></i>
+                    {{#if status_text}}
+                        {{t "Edit status" }}
+                    {{else}}
+                        {{t "Set a status" }}
+                    {{/if}}
+                </a>
+            </li>
+            {{#if invisible_mode}}
+            <li>
+                <a tabindex="0" class="invisible_mode_turn_off">
+                    <i class="fa fa-circle-o" aria-hidden="true"></i> {{t "Turn off invisible mode" }}
+                </a>
+            </li>
+            {{else}}
+            <li>
+                <a tabindex="0" class="invisible_mode_turn_on">
+                    <i class="fa fa-circle-o" aria-hidden="true"></i> {{t "Go invisible" }}
+                </a>
+            </li>
+            {{/if}}
+        </ul>
+    </div> --}}
+
     <div class="right-sidebar-items">
         <div id="user-list">
             <div id="userlist-header">
