1.添加‘创建的工作流’模块 2.把设置状态功能调整到右侧边栏顶部

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -3171,3 +3171,15 @@ select.invite-as {
         padding: 5px;
     }
 }
+
+.status-new {
+    margin-bottom: 20px;
+
+    .nav-list > li > a {
+        padding-left: 0;
+    }
+
+    .user_info_status_text #status_message {
+        margin-left: -15px;
+    }
+}
