--- a/web/templates/user_profile_modal.hbs
+++ b/web/templates/user_profile_modal.hbs
@@ -88,6 +88,7 @@
                                             {{> user_custom_profile_fields profile_fields=profile_data}}
                                         {{/if}}
                                     </div>
+                                    <div id="youfang_message_box"></div>
                                 </div>
                             </div>
                             <div class="col-wrap col-right new-avatar-box">
