--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -959,18 +959,188 @@ ul {
 
 .new-avatar-box {
     display: flex;
-    flex-direction: column;
-    gap: 0;
+    /* flex-direction: column; */
+    gap: 20px;
     margin-bottom: 10px;
 
     .default-field {
         padding-top: 10px;
     }
+
+    .avatar-info-top {
+        display: flex;
+        gap: 20px;
+    }
+
+    .info-list-title {
+        color: #f56c6c;
+        margin-top: 10px;
+    }
+
+    .info-list-item {
+        display: flex;
+        margin-top: 8px;
+        align-items: center;
+        gap: 3px;
+
+        &.danger {
+            color: #f56c6c;
+        }
+    }
+
+    .item-icon {
+        line-height: 0;
+    }
+}
+
+.new-intro-content {
+    margin: 10px 0;
+
+    .intro-box-title {
+        display: flex;
+        align-items: center;
+        font-size: 16px;
+        font-weight: 600;
+        gap: 5px;
+
+        .title-icon {
+            line-height: 1;
+        }
+
+        .orange {
+            color: #e5bb69;
+        }
+
+        .blue {
+            color: #409eff;
+        }
+
+        .green {
+            color: #00cf7a;
+        }
+
+        .deep-blue {
+            color: #030b9d;
+        }
+    }
+
+    .intro-tag-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        margin: 10px 0 20px;
+
+        .tag {
+            border: 1px solid #ccc;
+            padding: 2px 8px;
+            border-radius: 5px;
+
+            &.orange {
+                border-color: #e5bb69;
+
+                .span {
+                    color: #e5bb69;
+                }
+            }
+
+            &.blue {
+                border-color: #409eff;
+
+               .span {
+                    color: #409eff;
+                }
+            }
+
+            &.gray {
+                color: #999;
+            }
+        }
+    }
+
+    .intro-info-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        margin: 10px 0 20px;
+
+        .info-box {
+            width: calc(50% - 5px);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            .imgs {
+                margin-top: 5px;
+                margin-bottom: 10px;
+                width: 120px;
+            }
+        }
+    }
+
+    .info-url-list {
+        margin-bottom: 20px;
+
+        .url-item {
+            margin-bottom: 5px;
+
+            .url-label {
+                margin-right: 10px;
+            }
+        }
+    }
+
+    .intro-sku-list {
+        margin: 10px 0 20px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 12px;
+
+       .sku-item {
+            width: calc(50% - 6px);
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 5px;
+
+            .sku-info {
+                flex: 1;
+            }
+
+            .img {
+                width: 96px;
+            }
+
+            .sku-title {
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                font-size: 14px;
+                margin-bottom: 10px;
+            }
+
+            .sku-sales p {
+                padding: 0;
+                margin: 0;
+                font-size: 12px;
+            }
+        }
+    }
 }
 
 @media (width < $ml_min) {
     .new-avatar-box {
-        flex-direction: row;
-        gap: 20px;
+        gap: 10px;
+        align-items: center;
+    }
+
+    #user-profile-modal #avatar {
+        width: 120px;
+        height: 120px;
+    }
+
+    .sku-item {
+        width: 100%!important;
     }
 }
